# vyos-ls1046a-build

./: .gitignore  AGENTS.md  ASK-TEST.md  BOOT-PROCESS.md  CHANGELOG.md  DEV-LOCAL.md  FIRMWARE.md  INSTALL.md  PORTING.md  PPS-TEST.md  README.md  UBOOT.md  VPP-SETUP.md  VPP.md  captured_boot.md  uboot-read.ps1  version.json
archive/: FMD-SHIM-SPEC.md
archive/dpaa-pmd/data/cmake/: CMakeLists.txt
data/: ask-kernel.pin  config.boot.default  config.boot.dhcp  config.boot.full  dpdk-portal-mmap.patch  rebuild-no-dpaa.sh  vyos-1x-001-system_console.patch  vyos-1x-006-install-image-reserve-gap.patch  vyos-1x-007-prefer-emmc-default.patch  vyos-1x-008-raid-default-no.patch  vyos-1x-009-uboot-live-boot-detection.patch  vyos-1x-010-vpp-platform-bus.patch  vyos-1x-011-vyos-env-boot.patch  vyos-1x-012-ls1046a-motd.patch  vyos-1x-013-hide-live-boot-disk.patch  vyos-1x-014-download-chunk-size.patch  vyos-1x-015-arm64-cpu-display.patch  vyos-1x-016-timezone-rsyslog-guard.patch  vyos-1x-017-migration-31-32-uboot-fix.patch  vyos-1x-018-fix-partition-mount-iso9660.patch  vyos-1x-019-configd-ignore-sighup.patch  vyos-1x-019-disable-kexec-on-ls1046a.patch  vyos-build-010-ls1046a_dpaa_networking.patch
plans/: ACCEL-PPP-ARM64.md  ASK-3-FAILURES-FIX.md  ASK-ANALYSIS.md  ASK-CODE-QUALITY.md  ASK-FIX-PLAN.md  ASK-REPO-COMPARISON.md  ASK-UPSTREAM-SYNC.md  ASK-USERSPACE-PREP.md  ASK-USERSPACE.md  ASK41-PCD-MASK-FIX.md  DEV-LOOP.md  DPAA1-DPDK-PMD.md  FMD-SHIM-SPEC.md  MAINLINE-PATCH-SPEC.md  PCD-DEBUG-PLAN.md  STREAM-BUILD.md  USDPAA-IOCTL-SPEC.md  port_defects.md  userspace_defects.md
(+159 files in other folders)
