cmake_minimum_required(VERSION 3.16)
project(vpp-dpdk-plugin C)
macro(string_append var str)
  if(NOT ${var})
    set(${var} "${str}")
  else()
    set(${var} "${${var}} ${str}")
  endif()
endmacro()
macro(vpp_find_path var)
  cmake_parse_arguments(ARG "" "" "PATH_SUFFIXES;NAMES" ${ARGN})
  find_path(${var} PATH_SUFFIXES ${ARG_PATH_SUFFIXES} NAMES ${ARG_NAMES})
endmacro()
macro(vpp_plugin_find_library plugin var name)
  find_library(${var} NAMES ${name})
  if(NOT ${var})
    message(WARNING "-- ${plugin} plugin needs ${name} - not found")
  else()
    message(STATUS "-- ${plugin} plugin needs ${name} - found at ${${var}}")
  endif()
endmacro()
find_package(VPP REQUIRED)
set(VPP_USE_SYSTEM_DPDK OFF CACHE BOOL "" FORCE)
set(PRE_DATA_SIZE 128)
unset(OPENSSL_FOUND)
add_subdirectory(plugins/dpdk)
